# imagerio

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
src/: Image.h  main.cpp  utils.h
src/filters/: GaussianBlur.h  GrayScale.h  KuwaharaFilter.h
